# EnvTemplate

./: README.md
.github/: README.md
astro/: .env.example  .gitignore  README.md  astro.config.mjs  directory_structure.md  docker-compose.yml  package.json  vitest.config.ts
docs/: README.md
flutter/: README.md  setup_new_app.ps1
github/: copilot-instructions.md
go/: README.md
hono-cloudflare/: .gitignore  README.md  directory_structure.md  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
nest-next/: .env.example  .gitignore  README.md  directory_structure.md  docker-compose.yml
next/: README.md  package.json
next-fastapi-supabase/: .env.example  .gitignore  README.md  docker-compose.yml
next-go/: .env.example  README.md  docker-compose.yml
next-python/: .env.example  README.md  docker-compose.yml
next-python/FastAPI/: .env.docker  .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
next-python/FastAPI/app/api/: __init__.py  sample_endpoint.py  sample_endpoints.py
next-python/FastAPI/app/graphql/: __init__.py
next-python/FastAPI/app/graphql/resolvers/mutations/: sample_mutations.py
next-python/FastAPI/app/graphql/resolvers/queries/: sample_queries.py
next-python/FastAPI/app/graphql/schemas/: schema.py
next-python/FastAPI/app/middleware/: timing_middleware.py
next-python/FastAPI/app/repositories/: README.md
next-python/FastAPI/app/schemas/: sample_schema.py
next-python/FastAPI/prisma/: schema.prisma
next-python/FastAPI/tests/: README.md  conftest.py
nuxt/: .env.example  .gitignore  README.md  directory_structure.md  (+5 more)
python/Django/: .dockerignore  .env.docker  .env.example  .gitignore  README.md  docker-compose.yml  error  pyproject.toml  requirements.txt
python/Django/apps/posts/: __init__.py  admin.py  apps.py  models.py  repositories.py  schema.py  serializers.py  services.py  urls.py  views.py
python/Django/apps/posts/migrations/: 0002_alter_category_options_alter_post_options_and_more.py
python/Django/apps/sample/: __init__.py  admin.py  apps.py  category_schema.py  models.py  repositories.py  sample_schema.py  schema.py  serializers.py  services.py  urls.py  views.py
python/Django/apps/sample/admin/: __init__.py  admin.md  category_admin.py  sample_admin.py
python/Django/apps/sample/migrations/: 0001_initial.py  0002_alter_sample_is_published_alter_sample_likes_count_and_more.py  0003_about.py
python/Django/apps/sample/models/: __init__.py  about_model.py  category_model.py  models.md  sample_model.py
python/Django/apps/sample/repositories/: __init__.py  category_repository.py  repositories.md  sample_repository.py
python/Django/apps/sample/schema/: about_schema.py  category_schema.py  sample_schema.py  schema.md
python/Django/apps/sample/serializers/: __init__.py  about_serializer.py  category_serializer.py  sample_serializer.py  serializers.md
python/Django/apps/sample/service/: __init__.py  about_service.py  category_service.py  sample_service.py  services.md
python/Django/apps/sample/views/: __init__.py  about_views.py  category_views.py  sample_views.py  views.md
python/Django/apps/users/: __init__.py  admin.py  apps.py  models.py  repositories.py  schema.py  serializer.py  serializers.py  services.py  urls.py  views.py
python/Django/apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
python/Django/apps/users/models/: user_model.py
python/Django/apps/users/repositories/: user_repository.py
python/Django/apps/users/schema/: user_schema.py
python/Django/apps/users/service/: user_service.py
python/Django/apps/users/views/: user_views.py
python/Django/config/: __init__.py  asgi.py  celery.py  schema.py  settings.py  urls.py  wsgi.py
python/Django/core/: __init__.py  urls.py  views.py
python/Django/docker/: Dockerfile.backend
python/Django/docs/: DEV_GUIDE.html  DEV_GUIDE.md  graphql_guide.md  stater_guide.md
python/Django/prisma/: schema.prisma
python/Django/sample/: apps.py
python/Django/tests/: conftest.py  test_sample.py
(+440 files in other folders)
